# faultr-cli

./: README.md  action.yml  pyproject.toml  test_trace.json
examples/: faultr.yml
src/: test_payload.json
src/faultr_cli/: main.py
