[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "faultr-cli"
version = "0.1.0"
description = "Command-line interface for the Faultr agentic stress testing platform"
readme = "README.md"
authors = [
    { name = "Philip", email = "philip@faultr.ai" }
]
requires-python = ">=3.9"
dependencies = [
    "typer>=0.9.0",
    "httpx>=0.25.0",
    "rich>=13.0.0"
]

[project.scripts]
faultr = "faultr_cli.main:app"
